this is 2018/12/26 am

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,31 @@
         </dependency>
 
 
+
+        <!--<dependency>-->
+        <!--<groupId>org.apache.poi</groupId>-->
+        <!--<artifactId>poi</artifactId>-->
+        <!--<version>4.0.1</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+
+
+
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
@@ -86,6 +111,7 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.2</version>
         </dependency>
+
 
         <dependency>
             <groupId>org</groupId>
